[gd_scene load_steps=54 format=3 uid="uid://ntsj64m3dnc2"]

[ext_resource type="Script" path="res://mobs/ork.gd" id="1_5r2ou"]
[ext_resource type="Texture2D" uid="uid://bo7upkgjmosc4" path="res://Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Attack01.png" id="1_xlvi3"]
[ext_resource type="Texture2D" uid="uid://dul4i1jvjo7vu" path="res://Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Hurt.png" id="2_dy1m6"]
[ext_resource type="Texture2D" uid="uid://dfy2ms6e0oc8l" path="res://Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Death.png" id="3_p76i8"]
[ext_resource type="Texture2D" uid="uid://sospdxnx14gb" path="res://Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Idle.png" id="4_ar6gw"]
[ext_resource type="Texture2D" uid="uid://suev2w6fflk7" path="res://Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Walk.png" id="5_hxtuk"]
[ext_resource type="PackedScene" uid="uid://cbrhbjwym86ld" path="res://damage_box.tscn" id="7_iw0o6"]
[ext_resource type="PackedScene" uid="uid://c7lmnhttgk8xd" path="res://mobs/mob_health.tscn" id="8_o27tk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_srgej"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rcshy"]
atlas = ExtResource("1_xlvi3")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqt73"]
atlas = ExtResource("1_xlvi3")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wb0j"]
atlas = ExtResource("1_xlvi3")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c1ns"]
atlas = ExtResource("1_xlvi3")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s2ia"]
atlas = ExtResource("1_xlvi3")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_63go2"]
atlas = ExtResource("1_xlvi3")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaiha"]
atlas = ExtResource("2_dy1m6")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uemcn"]
atlas = ExtResource("2_dy1m6")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_abbxd"]
atlas = ExtResource("2_dy1m6")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kioi"]
atlas = ExtResource("2_dy1m6")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfmrg"]
atlas = ExtResource("3_p76i8")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_prgtg"]
atlas = ExtResource("3_p76i8")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_svrk4"]
atlas = ExtResource("3_p76i8")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjhfo"]
atlas = ExtResource("3_p76i8")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_inhvd"]
atlas = ExtResource("4_ar6gw")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdfsk"]
atlas = ExtResource("4_ar6gw")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nkh0"]
atlas = ExtResource("4_ar6gw")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dotj8"]
atlas = ExtResource("4_ar6gw")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j8w2"]
atlas = ExtResource("4_ar6gw")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_30gr4"]
atlas = ExtResource("4_ar6gw")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lku7m"]
atlas = ExtResource("4_ar6gw")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf6wg"]
atlas = ExtResource("4_ar6gw")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfum4"]
atlas = ExtResource("4_ar6gw")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6cnt"]
atlas = ExtResource("4_ar6gw")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_58r4c"]
atlas = ExtResource("4_ar6gw")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogegs"]
atlas = ExtResource("4_ar6gw")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_btf2f"]
atlas = ExtResource("5_hxtuk")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts1eu"]
atlas = ExtResource("5_hxtuk")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3ucw"]
atlas = ExtResource("5_hxtuk")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgd5h"]
atlas = ExtResource("5_hxtuk")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ambfr"]
atlas = ExtResource("5_hxtuk")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo0r1"]
atlas = ExtResource("5_hxtuk")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5rel"]
atlas = ExtResource("5_hxtuk")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b57jb"]
atlas = ExtResource("5_hxtuk")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_sghsc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcshy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqt73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wb0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c1ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s2ia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63go2")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaiha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uemcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abbxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kioi")
}],
"loop": false,
"name": &"Damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfmrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prgtg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svrk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjhfo")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_inhvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdfsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nkh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dotj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j8w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30gr4")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lku7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf6wg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfum4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6cnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58r4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogegs")
}],
"loop": false,
"name": &"Recover",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btf2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts1eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3ucw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgd5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ambfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo0r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5rel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b57jb")
}],
"loop": false,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_fgoya"]
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_l86re"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Damage"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2e2gu"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}

[sub_resource type="Animation" id="Animation_e85me"]
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ffqgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kr6nd"]
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Recover"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7q2op"]
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h8mkt"]
_data = {
"Attack": SubResource("Animation_fgoya"),
"Damage": SubResource("Animation_l86re"),
"Death": SubResource("Animation_2e2gu"),
"Idle": SubResource("Animation_e85me"),
"RESET": SubResource("Animation_ffqgy"),
"Recover": SubResource("Animation_kr6nd"),
"Run": SubResource("Animation_7q2op")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uilqh"]
size = Vector2(38, 41)

[node name="ork" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_5r2ou")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_srgej")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3.8147e-06, 3.8147e-06)
scale = Vector2(1.93, 1.93)
sprite_frames = SubResource("SpriteFrames_sghsc")
animation = &"Attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h8mkt")
}
autoplay = "Idle"

[node name="AttackDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(29, -3.5)
shape = SubResource("RectangleShape2D_uilqh")

[node name="DamageBox" parent="AttackDirection" instance=ExtResource("7_iw0o6")]

[node name="HurtBox" parent="AttackDirection/DamageBox" index="0"]
collision_layer = 32
collision_mask = 64

[node name="HitBox" parent="AttackDirection/DamageBox" index="1"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox" index="0"]
position = Vector2(26, 0)

[node name="MobHealth" parent="." instance=ExtResource("8_o27tk")]
position = Vector2(0, -21)
scale = Vector2(0.13, 0.13)

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HurtBox" to="MobHealth" method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="damage_received" from="MobHealth" to="." method="_on_mob_health_damage_received"]
[connection signal="no_health" from="MobHealth" to="." method="_on_mob_health_no_health"]

[editable path="AttackDirection/DamageBox"]
